--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -42,7 +42,7 @@
 /dev/smd6                 0660   system     system
 /dev/smd7                 0660   bluetooth  bluetooth
 
-#permissions for CSVT
+# Permissions for CSVT
 /dev/smd11                0660   radio      radio
 
 /dev/radio0               0640   system     system
@@ -55,6 +55,10 @@
 /dev/smdcntl5             0640   radio      radio
 /dev/smdcntl6             0640   radio      radio
 /dev/smdcntl7             0640   radio      radio
+/dev/smdcntl8             0640   radio      radio
+/dev/smdcntl9             0640   radio      radio
+/dev/smdcntl10            0640   radio      radio
+/dev/smdcntl11            0640   radio      radio
 /dev/smdcnt_rev0          0640   radio      radio
 /dev/smdcnt_rev1          0640   radio      radio
 /dev/smdcnt_rev2          0640   radio      radio
@@ -100,7 +104,6 @@
 /dev/jpeg0                0660   system     camera
 /dev/jpeg1                0660   system     camera
 /dev/jpeg2                0660   system     camera
-/dev/adsprpc-smd          0664   system     system
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini/              0660   system     camera
 /dev/mercury0             0660   system     camera
@@ -108,17 +111,21 @@
 /dev/msm_vidc_dec         0660   system     audio
 /dev/msm_vidc_dec_sec     0660   system     audio
 /dev/msm_vidc_enc         0660   system     audio
+/dev/msm_vidc_enc_sec     0660   system     audio
 /dev/msm_rotator          0660   system     system
 /dev/hw_random            0660   system     system
-/dev/adsprpc-smd          0664   system     system
+/dev/adsprpc-smd          0664   media      camera
+/dev/graphics/*           0660   system     graphics
+/dev/tun                  0660   system     vpn
 
-#permissions for audio
+# Permissions for audio
 /dev/msm_qcelp            0660   system     audio
 /dev/msm_evrc             0660   system     audio
 /dev/msm_wma              0660   system     audio
 /dev/msm_wmapro           0660   system     audio
 /dev/msm_amrnb            0660   system     audio
 /dev/msm_amrwb            0660   system     audio
+/dev/msm_amrwb_in         0660   system     audio
 /dev/msm_amrwbplus        0660   system     audio
 /dev/msm_aac              0660   system     audio
 /dev/msm_multi_aac        0660   system     audio
@@ -135,42 +142,36 @@
 /dev/msm_pcm_lp_dec       0660   system     audio
 /dev/msm_preproc_ctl      0660   system     audio
 /dev/msm_rtac             0660   system     audio
+/dev/msm_sps              0660   system     audio
 /dev/msm_voicememo        0660   system     audio
 /dev/radio0               0640   fm_radio   fm_radio
 /dev/smd3                 0660   bluetooth  net_bt_stack
 /dev/smd2                 0660   bluetooth  net_bt_stack
+/dev/ttyHSL0              0660   radio      system
 /dev/ttyHSL1              0660   system     system
 /dev/mdm                  0660   system     radio
-/sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
 /dev/sdio_tty_ciq_00      0660   system     system
 /dev/tty_sdio_00          0660   system     system
 /dev/ttyGS0               0660   system     system
-/dev/i2c-5                0660   media       media
-
-# Fingerprint
-/dev/vfsspi               0660   system     system
+/dev/i2c-5                0660   media      media
+/sys/devices/virtual/smdpkt/smdcntl*        open_timeout   0664 radio radio
 
 # DVB devices
 /dev/dvb/adapter0/demux*  0440   media       media
 /dev/dvb/adapter0/dvr*    0660   media       media
 /dev/dvb/adapter0/video*  0660   media       media
 
+# Charger
+/dev/keychord             0660   system     system
+
 # Broadcast devices
 /dev/tsc_mux0             0660   media       media
 /dev/tsc_ci0              0660   media       media
 
-# NFC
-/dev/bcm2079x             0600   nfc         nfc
-/dev/pn547                0660   nfc         nfc
-
-# Vibrator
-/dev/tspdrv               0660   root        shell
-
-# sensors
-/dev/alps_io              0660   input       system
-/sys/devices/i2c-12/12-*  pollrate_ms 0664 system system
-/sys/devices/f9925000.i2c/i2c-0/0-* enable          0660     input     system
-/sys/devices/f9925000.i2c/i2c-0/0-* poll_delay      0660     input     system
+# Sensors
+/sys/devices/i2c-12/12-*                            pollrate_ms    0664    system   system
+/sys/devices/f9925000.i2c/i2c-0/0-*                 enable         0660    input    system
+/sys/devices/f9925000.i2c/i2c-0/0-*                 poll_delay     0660    input    system
 /sys/devices/virtual/optical_sensors/proximity      ps_adc         0660    input    system
 /sys/devices/virtual/optical_sensors/proximity      ps_poll_delay  0660    input    system
 /sys/devices/virtual/optical_sensors/lightsensor    ls_auto        0660    input    system
@@ -178,162 +179,27 @@
 /sys/devices/virtual/input/input*                   poll           0660    input    system
 /sys/devices/virtual/input/input*                   pollrate_ms    0660    input    system
 
-# wlan
+# WLAN
 /dev/wcnss_wlan           0660   system     system
 /dev/wcnss_ctrl           0660   system     system
-#nfc permissions
-/dev/nfc-nci              0660    nfc         nfc
-/dev/assd                 0660    nfc         nfc
+/dev/rfkill               0660   wifi       wifi
+
+# NFC permissions
+/dev/nfc-nci                                        0660    nfc     nfc
+/dev/pn547                                          0660    nfc     nfc
+/sys/devices/f9925000.i2c/i2c-2/2-0028  init_deinit 0200    nfc     nfc
+/sys/devices/f9925000.i2c/i2c-2/2-0028  set_pwr     0200    nfc     nfc
+/sys/devices/f9925000.i2c/i2c-2/2-0028  res_ready   0400    nfc     nfc
+/sys/devices/f9925000.i2c/i2c-2/2-0028  recv_rsp    0600    nfc     nfc
+/sys/devices/f9925000.i2c/i2c-2/2-0028  send_cmd    0200    nfc     nfc
 
 # UIO devices
 /dev/uio0                 0660   system     system
 /dev/uio1                 0660   system     system
 /dev/uio2                 0660   system     system
 
-# sensorhub
-/dev/batch_io             0660   system     system
-/dev/ssp_sensorhub        0660   system     system
-/dev/iio:device*		  0660	 system	system
-/sys/devices/f9967000.spi/spi_master/spi32766/spi32766.0/iio:device*   buffer/enable 0660	  system	system
-/sys/devices/f9967000.spi/spi_master/spi32766/spi32766.0/iio:device*   buffer/length 0660	  system	system
-/sys/devices/f9967000.spi/spi_master/spi32765/spi32765.0/iio:device*   buffer/enable 0660	  system	system
-/sys/devices/f9967000.spi/spi_master/spi32765/spi32765.0/iio:device*   buffer/length 0660	  system	system
-/sys/devices/f9967000.spi/spi_master/spi11/spi11.0/iio:device*   buffer/enable 0660	  system	system
-/sys/devices/f9967000.spi/spi_master/spi11/spi11.0/iio:device*   buffer/length 0660	  system	system
-/sys/devices/f9924000.spi/spi_master/spi32766/spi32766.0/iio:device*   buffer/enable 0660     system    radio
-/sys/devices/f9924000.spi/spi_master/spi32766/spi32766.0/iio:device*   buffer/length 0660     system    radio
-/sys/devices/f9924000.spi/spi_master/spi32765/spi32765.0/iio:device*   buffer/enable 0660     system    radio
-/sys/devices/f9924000.spi/spi_master/spi32765/spi32765.0/iio:device*   buffer/length 0660     system    radio
+# Permission for dun
+/dev/dun                  0660   system     system
 
-#Accelerometer sensor
-/sys/devices/f9925000.i2c/i2c-0/0-0018/input/input*   enable     0664  system  system
-/sys/devices/f9925000.i2c/i2c-0/0-0018/input/input*   delay     0664  system  system
-/sys/devices/i2c.73/i2c-16/16-0018/input/input* enable    0664  system  system
-/sys/devices/i2c.73/i2c-16/16-0018/input/input* delay     0664  system  system
-
-# sysfs iio event
-/sys/devices/f9927000.i2c/i2c-5/5-0024/iio:device*										0664   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0024/iio:device* enable								0660   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0024/iio:device* in_grip0_input						0660   system     radio
-
-
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device*										0664   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device* enable								0660   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device* prox_enable							0660   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device* delay								0660   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device* prox_delay							0660   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device* in_illuminance0_input				0660   system     radio
-/sys/devices/f9927000.i2c/i2c-5/5-0039/iio:device* in_proximity0_input					0660   system     radio
-
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* uevent								0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* dev								0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* buffer/length						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* buffer/enable						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* scan_elements/in_timestamp_en		0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* scan_elements/in_timestamp_type	0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* scan_elements/in_timestamp_index	0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* sampling_frequency_available		0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* reg_dump							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* temperature						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_scale					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_x_calibbias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_y_calibbias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_z_calibbias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_x_offset				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_y_offset				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_z_offset				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_self_test_scale			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* self_test_samples					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* self_test_threshold				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* gyro_enable						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* gyro_fifo_enable					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* gyro_rate							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* power_state						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* sampling_frequency					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* self_test							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* gyro_matrix						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* secondary_name						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* reg_write							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* debug_smd_enable_testp1			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* debug_smd_enable_testp2			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* debug_smd_exe_state				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* debug_smd_delay_cntr				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_suspend_resume				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_gyro_counter					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_accel_counter					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_compass_counter				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_pressure_counter				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_LPQ_counter					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_PEDQ_counter					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* test_SIXQ_counter					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* event_display_orientation			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* event_accel_motion					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* event_smd							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* event_pedometer					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_scale						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_x_calibbias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_y_calibbias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_z_calibbias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_self_test_scale			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_x_offset					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_y_offset					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_z_offset					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_x_dmp_bias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_y_dmp_bias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_accel_z_dmp_bias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_x_dmp_bias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_y_dmp_bias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_anglvel_z_dmp_bias				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* pedometer_int_on					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* pedometer_on						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* pedometer_steps					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* pedometer_time						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* smd_enable							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* smd_threshold						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* smd_delay_threshold				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* smd_delay_threshold2				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* display_orientation_on				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* dmp_on								0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* dmp_int_on							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* dmp_event_int_on					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* step_indicator_on					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* batchmode_timeout					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* batchmode_wake_fifo_full_on		0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* six_axes_q_on						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* six_axes_q_rate					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* three_axes_q_on					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* three_axes_q_rate					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* ped_q_on							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* ped_q_rate							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* step_detector_on					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* motion_lpa_on						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* motion_lpa_freq					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* motion_lpa_threshold				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* accel_enable						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* accel_fifo_enable					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* firmware_loaded					0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* accel_matrix						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* accel_rate							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* in_magn_scale						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* compass_enable						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* compass_rate						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* compass_matrix						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* compass_sens						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* name								0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* trigger/current_trigger			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* power/runtime_status				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* power/control						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* power/runtime_suspended_time		0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* power/runtime_active_time			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* power/autosuspend_delay_ms			0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* dmp_firmware						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* event_tap							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* flush_batch						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* master_enable						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* tap_min_count						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* tap_on								0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* tap_threshold						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* tap_time							0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* dmp_firmware						0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* pedometer_int_thresh				0660   system     radio
-/sys/devices/f9968000.i2c/i2c-12/12-0068/iio:device* pedometer_step_thresh				0660   system     radio
+# Latin Mobile TV
+/dev/isdbt                0660   system     system
